clusters/homelab/apps/game-2048/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: game-2048
  labels:
    expose-public: "true"
